Closed Bug 717278 Opened 13 years ago Closed 12 years ago

Vector should have const and non-const begin()

Categories

(Core :: JavaScript Engine, defect)

Other Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: jorendorff, Assigned: jorendorff)

Details

Attachments

(1 file)

Vector has both const and non-const end() methods but only a const begin() method, and it returns a pointer-to-non-const T, which seems wrong to me.
Indeed, Vector used to have this right; it looks like it regressed in http://hg.mozilla.org/mozilla-central/rev/b60ac564e39d#l1.253.
Attached patch v1Splinter Review
Assignee: general → jorendorff
Attachment #587745 - Flags: review?(luke)
Attachment #587745 - Flags: review?(luke) → review+
https://hg.mozilla.org/mozilla-central/rev/11ba93db719a
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: