Bug 717278 - Vector should have const and non-const begin(). r=luke.